--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -46,3 +46,13 @@
 .success-msg {
   background-color: #2ecc71;
 }
+
+.container-80 {
+  width: 80%;
+  margin: 0 auto;
+}
+
+.container-90 {
+  width: 90%;
+  margin: 0 auto;
+}
