--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -102,3 +102,11 @@ ul {
 .active-tab {
   display: block;
 }
+
+.patient-row {
+  padding: 10px 10px;
+}
+
+.patient-row:hover {
+  background-color: #e6f4ea;
+}
